--- a/BuildPartsCatalog/BuildPartsCatalog.vcxproj
+++ b/BuildPartsCatalog/BuildPartsCatalog.vcxproj
@@ -33,6 +33,10 @@
     <ProjectReference Include="..\3rdParty\minizip\minizip.vcxproj">
       <Project>{a90c8bd0-bb72-4e5a-8c8d-2637966b0013}</Project>
     </ProjectReference>
+    <ProjectReference Include="3rdParty\zlib\zlib.vcxproj">
+      <Project>{745DEC58-EBB3-47A9-A9B8-4C6627C01BF8}</Project>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
     <ProjectReference Include="..\3rdParty\tinyxml\tinyxml.vcxproj">
       <Project>{a3a84737-5017-4577-b8a2-79429a25b8b6}</Project>
     </ProjectReference>
@@ -117,7 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>USE_CPP11;HAVE_MINIZIP;_NO_BOOST;WIN32;_WINDOWS;_WIN32_WINDOWS=0x0501;_WIN32_WINNT=0x0501;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..;../include;../3rdParty;../3rdParty/libpng;../3rdParty/libpng/Windows</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..;../include;../3rdParty/zlib;../3rdParty;../3rdParty/libpng;../3rdParty/libpng/Windows</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -133,7 +137,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>USE_CPP11;HAVE_MINIZIP;_NO_BOOST;WIN32;_WINDOWS;_WIN32_WINDOWS=0x0501;_WIN32_WINNT=0x0501;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..;../include;../3rdParty;../3rdParty/libpng;../3rdParty/libpng/Windows</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..;../include;../3rdParty/zlib;../3rdParty;../3rdParty/libpng;../3rdParty/libpng/Windows</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -149,13 +153,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>USE_CPP11;HAVE_MINIZIP;_NO_BOOST;_TC_STATIC;WIN32;_WINDOWS;_WIN32_WINDOWS=0x0501;_WIN32_WINNT=0x0501;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..;../include;../3rdParty;../3rdParty/libpng;../3rdParty/libpng/Windows</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..;../include;../3rdParty/zlib;../3rdParty;../3rdParty/libpng;../3rdParty/libpng/Windows</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ws2_32.lib;shlwapi.lib;libpng16-vs2019.lib;zlib-vs2019.lib;unzip32-vs2019.lib;libjpeg-vs2019.lib;lib3ds-vs2019.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;shlwapi.lib;libpng16-vs2019.lib;unzip32-vs2019.lib;libjpeg-vs2019.lib;lib3ds-vs2019.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\lib\x64;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -176,7 +180,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ws2_32.lib;shlwapi.lib;libpng16-vs2019.lib;zlib-vs2019.lib;unzip32-vs2019.lib;libjpeg-vs2019.lib;lib3ds-vs2019.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;shlwapi.lib;libpng16-vs2019.lib;unzip32-vs2019.lib;libjpeg-vs2019.lib;lib3ds-vs2019.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\lib\x64;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
