CMake update for tinyxml2

--- a/QT/CMakeLists.txt
+++ b/QT/CMakeLists.txt
@@ -16,21 +16,21 @@ message(STATUS "PNG:     ${PNG_VERSION_STRING}")
 message(STATUS "JPEG:    ${JPEG_VERSION}")
 message(STATUS "ZLIB:    ${ZLIB_VERSION}")
 
-find_path(TINYXML_INCLUDE_DIR "tinyxml.h" )
-find_library( TINYXML_LIBRARIES
-              NAMES "tinyxml" )
-if (TINYXML_INCLUDE_DIR)
-  file(STRINGS "${TINYXML_INCLUDE_DIR}/tinyxml.h" _tinyxml_version_lines REGEX "const int TIXML_(MAJOR|MINOR|PATCH)_VERSION =")
-  string(REGEX REPLACE ".*TIXML_MAJOR_VERSION = \([0-9]*\).*" "\\1" _tinyxml_version_major "${_tinyxml_version_lines}")
-  string(REGEX REPLACE ".*TIXML_MINOR_VERSION = \([0-9]*\).*" "\\1" _tinyxml_version_minor "${_tinyxml_version_lines}")
-  string(REGEX REPLACE ".*TIXML_PATCH_VERSION = \([0-9]*\).*" "\\1" _tinyxml_version_patch "${_tinyxml_version_lines}")
-  set(TINYXML_VERSION "${_tinyxml_version_major}.${_tinyxml_version_minor}.${_tinyxml_version_patch}")
-  unset(_tinyxml_version_major)
-  unset(_tinyxml_version_minor)
-  unset(_tinyxml_version_patch)
-  unset(_tinyxml_version_lines)
+find_path(TINYXML2_INCLUDE_DIR "tinyxml2.h" )
+find_library( TINYXML2_LIBRARIES
+              NAMES "tinyxml2" )
+if (TINYXML2_INCLUDE_DIR)
+  file(STRINGS "${TINYXML2_INCLUDE_DIR}/tinyxml2.h" _tinyxml2_version_lines REGEX "const int TIXML2_(MAJOR|MINOR|PATCH)_VERSION =")
+  string(REGEX REPLACE ".*TIXML2_MAJOR_VERSION = \([0-9]*\).*" "\\1" _tinyxml2_version_major "${_tinyxml2_version_lines}")
+  string(REGEX REPLACE ".*TIXML2_MINOR_VERSION = \([0-9]*\).*" "\\1" _tinyxml2_version_minor "${_tinyxml2_version_lines}")
+  string(REGEX REPLACE ".*TIXML2_PATCH_VERSION = \([0-9]*\).*" "\\1" _tinyxml2_version_patch "${_tinyxml2_version_lines}")
+  set(TINYXML2_VERSION "${_tinyxml2_version_major}.${_tinyxml2_version_minor}.${_tinyxml2_version_patch}")
+  unset(_tinyxml2_version_major)
+  unset(_tinyxml2_version_minor)
+  unset(_tinyxml2_version_patch)
+  unset(_tinyxml2_version_lines)
 endif ()
-message(STATUS "tinyxml: ${TINYXML_VERSION}")
+message(STATUS "tinyxml2:${TINYXML2_VERSION}")
 
 find_path(GL2PS_INCLUDE_DIR "gl2ps.h" )
 find_library( GL2PS_LIBRARIES
@@ -100,7 +100,7 @@ target_link_libraries(LDView -L${CMAKE_SOURCE_DIR}/../LDLib -lLDraw-qt${QT_VERSI
 target_link_libraries(LDView -L${CMAKE_SOURCE_DIR}/../TCFoundation -lTCFoundation-qt${QT_VERSION_MAJOR})
 target_link_libraries(LDView -L${CMAKE_SOURCE_DIR}/../LDExporter -lLDExporter-qt${QT_VERSION_MAJOR})
 target_link_libraries(LDView -L${CMAKE_SOURCE_DIR}/../LDLoader -lLDLoader-qt${QT_VERSION_MAJOR})
-target_link_libraries(LDView ${GL2PS_LIBRARIES} ${TINYXML_LIBRARIES} ${MINIZIP_LIBRARIES} -l3ds -L${CMAKE_SOURCE_DIR}/../3rdParty/lib3ds)
+target_link_libraries(LDView ${GL2PS_LIBRARIES} ${TINYXML2_LIBRARIES} ${MINIZIP_LIBRARIES} -l3ds -L${CMAKE_SOURCE_DIR}/../3rdParty/lib3ds)
 
 target_link_libraries(LDView Qt${QT_VERSION_MAJOR}::Widgets)
 target_link_libraries(LDView Qt${QT_VERSION_MAJOR}::PrintSupport)
