Qt: CMake update

--- a/QT/CMakeLists.txt
+++ b/QT/CMakeLists.txt
@@ -127,6 +127,7 @@ ExternalProject_Add(TRE
 	BUILD_IN_SOURCE 1
 	BUILD_COMMAND ${CMAKE_MAKE_PROGRAM} POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST\ -DHAVE_MINIZIP\ -DUSE_CPP11
 	INSTALL_COMMAND ""
+	PREFIX ${CMAKE_SOURCE_DIR}/../TRE/.obj-qt6
 )
 
 ExternalProject_Add(TCFoundation
@@ -135,6 +136,7 @@ ExternalProject_Add(TCFoundation
 	BUILD_IN_SOURCE 1
 	BUILD_COMMAND ${CMAKE_MAKE_PROGRAM} POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST\ -D_QT\ -I/usr/include/qt6\ -DHAVE_MINIZIP\ -DUSE_CPP11
 	INSTALL_COMMAND ""
+	PREFIX ${CMAKE_SOURCE_DIR}/../TCFoundation/.obj-qt6
 )
 
 ExternalProject_Add(LDExporter
@@ -143,6 +145,7 @@ ExternalProject_Add(LDExporter
 	BUILD_IN_SOURCE 1
 	BUILD_COMMAND ${CMAKE_MAKE_PROGRAM} POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST\ -DHAVE_MINIZIP\ -DUSE_CPP11
 	INSTALL_COMMAND ""
+	PREFIX ${CMAKE_SOURCE_DIR}/../LDExporter/.obj-qt6
 )
 
 ExternalProject_Add(LDLoader
@@ -151,6 +154,7 @@ ExternalProject_Add(LDLoader
 	BUILD_IN_SOURCE 1
 	BUILD_COMMAND ${CMAKE_MAKE_PROGRAM} POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST\ -D_QT\ -DHAVE_MINIZIP\ -DUSE_CPP11
 	INSTALL_COMMAND ""
+	PREFIX ${CMAKE_SOURCE_DIR}/../LDLoader/.obj-qt6
 )
 
 ExternalProject_Add(LDLib
@@ -159,6 +163,7 @@ ExternalProject_Add(LDLib
 	BUILD_IN_SOURCE 1
 	BUILD_COMMAND ${CMAKE_MAKE_PROGRAM} POSTFIX=-qt${QT_VERSION_MAJOR} TESTING=-D_NO_BOOST\ -DHAVE_MINIZIP\ -DUSE_CPP11
 	INSTALL_COMMAND ""
+	PREFIX ${CMAKE_SOURCE_DIR}/../LDLib/.obj-qt6
 )
 
 ExternalProject_Add(3ds
@@ -167,6 +172,7 @@ ExternalProject_Add(3ds
 	BUILD_IN_SOURCE 1
 	BUILD_COMMAND ${CMAKE_MAKE_PROGRAM}
 	INSTALL_COMMAND ""
+	PREFIX ${CMAKE_SOURCE_DIR}/../3rdParty/lib3ds/.obj
 )
 
 #get_cmake_property(_variableNames VARIABLES)
