--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,12 +38,12 @@ environment:
 #      TOOLSET: v143
 #      SDK: 10.0
 #    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
-    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
-      QT: 5.15
+#    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
+#      QT: 5.15
 #    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
 #      QT: 6.8
-    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
-      QT: 6.9
+#    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
+#      QT: 6.9
 #    - APPVEYOR_BUILD_WORKER_IMAGE: macos-sonoma
 
 install:
@@ -59,6 +59,7 @@ build_script:
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:PlatformToolset=%TOOLSET% /p:WindowsTargetPlatformVersion=%SDK% /p:Configuration=Release /p:SolutionDir=C:\projects\ldview\ /p:Platform=x64 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:PlatformToolset=%TOOLSET% /p:WindowsTargetPlatformVersion=%SDK% /p:Configuration=Release /p:SolutionDir=C:\projects\ldview\ /p:Platform=win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 #- cmd: if exist "\Program Files (x86)\Inno Setup 6\iscc.exe" "\Program Files (x86)\Inno Setup 6\iscc.exe" C:\projects\ldview\LDView64.iss
+
 
 
 
